--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/scss/bootstrap"
+@import "./assets/styles/reset"
+@import "./assets/styles/common"
+
+html,body
+  overflow: hidden !important
