创建图片管理、文章管理页面

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,3 +1,10 @@
-<div>
-  主体入口
+<div class="main-layout">
+  <app-layout-wrapper class="app-layout-wrapper flex-jcsb">
+    <app-layout-sider class="app-layout-sider"></app-layout-sider>
+    <app-layout-wrapper class="app-layout-wrapper flex-fdc-jcsb flex-1">
+      <app-layout-header></app-layout-header>
+      <app-layout-content class="app-layout-content flex-1"></app-layout-content>
+      <app-layout-footer></app-layout-footer>
+    </app-layout-wrapper>
+  </app-layout-wrapper>
 </div>
