--- a/src/app/layout/components/layout-header/layout-header.component.html
+++ b/src/app/layout/components/layout-header/layout-header.component.html
@@ -2,9 +2,9 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li>当前位置：</li>
-      <li class="breadcrumb-item"><a href="#">Home</a></li>
-      <li class="breadcrumb-item"><a href="#">Library</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Data</li>
+      <li class="breadcrumb-item" *ngFor="let item of breadcrumb" [attr.aria-current]="item.href?'page':''" class=" {{item.href?'active':''}}">
+        {{item.title}}
+      </li>
     </ol>
   </nav>
 </header>
