--- a/src/app/layout/components/layout-sider/layout-sider.component.sass
+++ b/src/app/layout/components/layout-sider/layout-sider.component.sass
@@ -23,7 +23,9 @@
     .accordion-button
       font-weight: bold
     .submenus
+      margin: 0
       li
+        margin: 0
         padding: 5px
         &:not(:first-of-type)
           margin-top: 15px !important
