--- a/src/assets/styles/reset.sass
+++ b/src/assets/styles/reset.sass
@@ -4,8 +4,8 @@ html
 
 body, dl, dt, dd, ul, ol, li, pre, form, fieldset, input, p, blockquote, th, td
   font-weight: 400
-  margin: 0 !important
-  padding: 0 !important
+  margin: 0
+  padding: 0
 
 h1, h2, h3, h4, h4, h5
   margin: 0
@@ -16,7 +16,7 @@ body
   color: #666666
   font-family: Helvetica,Arial,sans-serif
   font-size: 12px
-  padding: 0 10px
+  padding: 0
   text-align: left
 
 select
