使用Bootstrap代替common手写样式

--- a/src/app/layout/main-layout/main-layout.component.html
+++ b/src/app/layout/main-layout/main-layout.component.html
@@ -1,9 +1,9 @@
 <div class="main-layout">
-  <app-layout-wrapper class="app-layout-wrapper flex-jcsb">
+  <app-layout-wrapper class="app-layout-wrapper d-flex justify-content-between">
     <app-layout-sider class="app-layout-sider"></app-layout-sider>
-    <app-layout-wrapper class="app-layout-wrapper flex-fdc-jcsb flex-1">
+    <app-layout-wrapper class="app-layout-wrapper d-flex flex-column ustify-content-between flex-fill">
       <app-layout-header></app-layout-header>
-      <app-layout-content class="app-layout-content flex-1"></app-layout-content>
+      <app-layout-content class="app-layout-content flex-fill"></app-layout-content>
       <app-layout-footer></app-layout-footer>
     </app-layout-wrapper>
   </app-layout-wrapper>
