--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "./assets/styles/reset"
-@import "./assets/styles/common"
+@import "./app/assets/styles/reset"
+@import "./app/assets/styles/common"
 
 html,body
   overflow: hidden !important
